# Tpsit_Project_Work

./: CMakeLists.txt  README.md  main.cpp
include/: Alpina.h  Carnivora.h  CommandParse.h  Desertica.h  Impianto.h  Mediterranea.h  Serra.h  Time.h  Tropicale.h
src/: Alpina.cpp  Carnivora.cpp  CommandParse.cpp  Desertica.cpp  Impianto.cpp  Mediterranea.cpp  Serra.cpp  Time.cpp  Tropicale.cpp
